# thunderbird-uplift-queries

./: .gitignore  README.md  get-uplift-queries  pyproject.toml
src/thunderbird_uplift_queries/: __init__.py  cli.py
